kambing-sample-pod/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: kambing
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: testapp1
        image: tedytirta/testcgk
        imagePullPolicy: Always
        ports: 
        - containerPort: 8080
      nodeSelector:
        kubernetes.io/arch: amd64
