kambing-sample-pod/app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: kambing
  labels:
    app: app1
spec:
  selector:
    app: app1
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
