kambing-sample-pod/app2.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kuda
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  namespace: kuda
  labels:
    app: app2
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: testapp2
        image: tedytirta/testapp2
        imagePullPolicy: Always
        ports: 
        - containerPort: 8080
      nodeSelector:
        kubernetes.io/arch: amd64
        eks.amazonaws.com/nodegroup: nodegroup-x86
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: kuda
  labels:
    app: app2
spec:
  selector:
    app: app2
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "kuda-app2-ingress"
  namespace: kuda
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - http:
        paths:
        - path: /app2
          pathType: Prefix
          backend:
            service:
              name: app2-service
              port:
                number: 80
        - path: /
          pathType: Exact
          backend:
            service:
              name: app2-service
              port: 
                number: 80
